find_package(OpenGL REQUIRED)
if(OpenGL_FOUND)
    include_directories(${OPENGL_INCLUDE_DIR})
    message(STATUS ${OPENGL_INCLUDE_DIR})
    message(STATUS ${OPENGL_LIBRARIES})
else()
    message(WARNING "OpenGL Library Not Found")
endif()

find_package(GLUT REQUIRED)
if(GLUT_FOUND)
    include_directories(${GLUT_INCLUDE_DIR})
    message(STATUS ${GLUT_INCLUDE_DIR})
    message(STATUS ${GLUT_LIBRARY})
else()
    message(WARNING "GLUT Library Not Found")
endif()

find_package(X11 REQUIRED)
if(X11_FOUND)
    include_directories(${X11_INCLUDE_DIR})
    message(${X11_INCLUDE_DIR})
    message(${X11_LIBRARIES})
else()
    message(WARNING "X11 Library Not Found")
endif()

if(X11_FOUND AND OpenGL_FOUND AND GLUT_FOUND)
    set(ShowPointCloud true)
    message(STATUS "Point Cloud Example Enabled")
else()
    set(ShowPointCloud false)
    message(WARNING "Point Cloud Example Disabled")
endif()

if(${ShowPointCloud})
add_executable(PointCloudReceive ./PointCloudReceive.cpp ./UdpTrans.cpp ./glViewer/glwindow_x11.cpp ./glViewer/scenewindow.cpp)
target_link_libraries(PointCloudReceive ${SDKLIBS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${X11_LIBRARIES} )
add_executable(PointCloudSend ./PointCloudSend.cpp ./UdpTrans.cpp ./glViewer/glwindow_x11.cpp ./glViewer/scenewindow.cpp)
target_link_libraries(PointCloudSend ${SDKLIBS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${X11_LIBRARIES} )
endif()


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
